@@ -34,8 +34,9 @@
 #include <sys/types.h>
 #include <unistd.h>
 
-XdgGlobHash *global_hash = NULL;
-XdgMimeMagic *global_magic = NULL;
+static int initted = 0;
+static XdgGlobHash *global_hash = NULL;
+static XdgMimeMagic *global_magic = NULL;
 
 
 static void
@@ -59,8 +60,6 @@ _xdg_mime_init_from_directory (const char *directory)
 static void
 xdg_mime_init (void)
 {
-  static int initted = 0;
-
   if (initted == 0)
     {
       const char *xdg_data_home;
@@ -232,4 +231,20 @@ xdg_mime_is_valid_mime_type (const char *mime_type)
   /* FIXME: We should make this a better test
    */
   return _xdg_utf8_validate (mime_type);
+}
+
+void
+xdg_mime_shutdown (void)
+{
+  /* FIXME: Need to make this (and the whole library) thread safe */
+  if (initted)
+    {
+      _xdg_glob_hash_free (global_hash);
+      global_hash = NULL;
+
+      _xdg_mime_magic_free (global_magic);
+      global_magic = NULL;
+
+      initted = 0;
+    }
 }
